--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,8 @@ http {
     server {
         listen 4050;
 
+        server_name file.iodash.anazirov.com www.file.iodash.anazirov.com;
+
         client_max_body_size 2048M;
 
         location / {
